feat(index): init

--- a/webRtcService/.github/workflows/github-actions.yml
+++ b/webRtcService/.github/workflows/github-actions.yml
@@ -1,4 +1,4 @@
-name: Amazon webRtcSerive Deploy
+name: Amazon webRtcService Deploy
 on:
   push:
     branches:
@@ -30,7 +30,7 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.DEPLOY_PASSWORD }}
           scp_source: dist
-          scp_target: /www/webRtcSerive/
+          scp_target: /www/webRtcService/
           before_script: |
-            rm -rf /web/WebRtcWeb
+            rm -rf /www/webRtcService
       - run: echo "🍏 This job's status is ${{ job.status }}."
